--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,22 +18,38 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v5.4.0
+      with:
+        # major (breaking) change, supports regular expressions wrapped with '/'
+        major_pattern: "major:"
+        # Same as above except indicating a minor change, supports regular expressions wrapped with '/'
+        minor_pattern: "feat:"
+        # A string to determine the format of the version output
+        version_format: "${major}.${minor}.${patch}-prerelease${increment}"
+      id: version
+
     - name: Docker login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD}}
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+
       run: |
         echo "Iniciando Login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Fin del Login"
+        echo "New version: $NEW_VERSION !!!!!!!!"
 
-    - name: Build Docker Image
-      run: |
-        docker build -t juliocesarforero/docker-graphql:0.0.2 .
+    # - name: Build Docker Image
+    #   run: |
+    #     docker build -t juliocesarforero/docker-graphql:0.0.2 .
+    #     docker build -t juliocesarforero/docker-graphql:latest .
 
-    - name: Push Docker Image
-      run: |
-        docker push juliocesarforero/docker-graphql:0.0.2
+    # - name: Push Docker Image
+    #   run: |
+    #     docker push juliocesarforero/docker-graphql:0.0.2
+    #     docker push juliocesarforero/docker-graphql:latest
         
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
