--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,6 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD}}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
 
       run: |
         echo "Iniciando Login"
@@ -41,15 +40,19 @@ jobs:
         echo "Fin del Login"
         echo "New version: $NEW_VERSION !!!!!!!!"
 
-    # - name: Build Docker Image
-    #   run: |
-    #     docker build -t juliocesarforero/docker-graphql:0.0.2 .
-    #     docker build -t juliocesarforero/docker-graphql:latest .
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t juliocesarforero/docker-graphql:$NEW_VERSION .
+        docker build -t juliocesarforero/docker-graphql:latest .
 
-    # - name: Push Docker Image
-    #   run: |
-    #     docker push juliocesarforero/docker-graphql:0.0.2
-    #     docker push juliocesarforero/docker-graphql:latest
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push juliocesarforero/docker-graphql:$NEW_VERSION
+        docker push juliocesarforero/docker-graphql:latest
         
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
